# DA-MolDQN

./: .gitattributes  .gitignore  .gitmodules  README.md  agent.py  agent_old.py  agent_unimol.py  conformer3d.py  dqn.py  environment.py  environment.yml  eval.py  example.txt  filter.py  gnn_dqn.py  hpc.def  hyp.py  main.py  main_hpc.py  molecules.py  replay_buffer.py  run_unimol.py  show_paths.py  training_utils.py  unimol_dqn.py  utils.py
Data/: AODB_s.csv  ChEMBL_500_sample.txt  ChemBL_small_mol.csv  anti_pub.txt  anti_pub_all.txt  anti_test.txt  aodb_20.csv  aodb_20.txt  chembl_31_10k.txt  cluster_8_small_molecule_in_ChemBL.pickle  zinc_10000.txt
Data/.ipynb_checkpoints/: find_in_ChEMBL_31-checkpoint.ipynb
Data/ChEMBL_31/: chembl_31_chemreps_oh_35.txt
Data/USPTO/: USPTO_50K.csv  USPTO_FULL.csv  USPTO_MIT.csv  USPTO_STEREO.csv
Data/anti-dataset/: ANTI_00.txt  ANTI_01.txt  ANTI_02.txt  ANTI_03.txt  ANTI_04.txt  ANTI_05.txt  ANTI_06.txt  ANTI_07.txt  ANTI_08.txt  ANTI_09.txt  ANTI_10.txt  ANTI_11.txt  ANTI_12.txt  ANTI_13.txt  ANTI_14.txt  ANTI_15.txt  ANTI_16.txt  ANTI_17.txt  ANTI_18.txt  ANTI_19.txt  ANTI_20.txt
Data/invalid_3d_mols/: aodb_invalid_mols.txt  aodb_rank_0.txt  diffusion_mols.txt  diffusion_mols_rank_0.txt  diffusion_mols_rank_1.txt  diffusion_mols_rank_10.txt  diffusion_mols_rank_11.txt  diffusion_mols_rank_12.txt  diffusion_mols_rank_13.txt  diffusion_mols_rank_14.txt  diffusion_mols_rank_15.txt  diffusion_mols_rank_16.txt  diffusion_mols_rank_17.txt  diffusion_mols_rank_18.txt  diffusion_mols_rank_19.txt  diffusion_mols_rank_2.txt  diffusion_mols_rank_20.txt  diffusion_mols_rank_21.txt  diffusion_mols_rank_22.txt  diffusion_mols_rank_23.txt  diffusion_mols_rank_24.txt  diffusion_mols_rank_25.txt  diffusion_mols_rank_26.txt  diffusion_mols_rank_27.txt  diffusion_mols_rank_28.txt  diffusion_mols_rank_29.txt  diffusion_mols_rank_3.txt  diffusion_mols_rank_30.txt  diffusion_mols_rank_31.txt  diffusion_mols_rank_4.txt  diffusion_mols_rank_5.txt  diffusion_mols_rank_6.txt  diffusion_mols_rank_7.txt  diffusion_mols_rank_8.txt  diffusion_mols_rank_9.txt  invalid_mols_ChEMBL_0.txt  invalid_mols_ChEMBL_1.txt  invalid_mols_ChEMBL_10.txt  invalid_mols_ChEMBL_11.txt  invalid_mols_ChEMBL_12.txt  (+12 more)
Experiments/: .ZincPlogPIND_.pickle_cache.pickle  .ZincPlogpFT_.pickle_cache.pickle  .ZincQEDFT_.pickle_cache.pickle  .ZincQEDIND_.pickle_cache.pickle  reasyn_multi_5_synthesis_routes.txt  test_10_args.pickle  test_1_0_episodes.pickle  test_1_0_path.pickle  test_1_args.pickle
Experiments/filtered/: trial_1000_filtered.csv  trial_1000_path.csv  trial_1100_filtered.csv  trial_1100_path.csv  trial_9000_filtered.csv  trial_9000_path.csv
bde_predictor/: benchmark.py  convert_weights.py  generate_reference.py  model.py  predict.py  preprocessor.py
bde_predictor/tests/: reference_predictions.json  test_equivalence.py  test_model.py  test_predict.py  test_preprocessor.py
conf/: config.yaml
conf/dqn/: default.yaml
conf/etkdg/: aug11.yaml  normal.yaml  turbo.yaml
conf/mol/: default.yaml
conf/reward/: bde_ip.yaml  plogp.yaml  qed.yaml
configs/: config.yaml
configs/experiment/: full.yaml  smoke.yaml
configs/method/: reasyn.yaml  route.yaml
configs/reward/: admet.yaml  dock.yaml  dock_deprecated.yaml  dock_gsk3b_jnk3.yaml  dock_rxnflow.yaml  moo_gsk3b_jnk3.yaml  multi.yaml  multi_deprecated.yaml  qed.yaml
dft/public/: dft_validation.csv
docking/: __init__.py  dock_scorer.py
docs/: rl_mol_opt_retrospective.md
docs/rl_methods/: method1_hypergraph_aio.md  method2_template_t5v2.md  method3_route_dqn.md  method4_reasyn_dqn.md  method5_rl_guided_gp.md  method6_unimol_dqn.md
hypergraph/: __init__.py  action_generator.py  hypergraph_neighbor_predictor.py
jupyter-notes/: diversity.py  mols.ipynb  plots.ipynb  scaffold_overlap.py  tools.py
model_reactions/: __init__.py  action_generator.py  config.py  hybrid_predictor.py  reactant_predictor.py  reaction_predictor.py  utils.py
reasyn/chem/: fpindex.py  (+1 more)
results/: diversity_metrics.csv
reward/: __init__.py  core.py  multi.py  qed.py
rewards/: __init__.py  base.py  bde_ip.py  factory.py  plogp.py  qed_sa.py
rl/: __init__.py  trainer.py
rl_sync_not_working/: action_generator.py  environment.py  filter.py  main_sync.py
route/: __init__.py  policy_network.py  retro_decompose.py  route.py  route_dqn.py  route_environment.py  train_route_dqn.py
scripts/: ablation_reward_weights.sh  ablation_rw_5003.sh  ablation_rw_5004.sh  ablation_rw_5005.sh  ablation_rw_5006.sh  ablation_rw_5007.sh  ablation_rw_test.sh  alfabet_64rank.sh  alfabet_64rank_v2.sh  alfabet_single.sh  alfabet_single_v2.sh  analyze_diversity_qed.py  analyze_experiments.py  analyze_paroutes.py  analyze_paroutes_quality.py  analyze_paroutes_vs_properties.py  analyze_uncovered_reactions.py  baseline_bdedb2_v2.sh  baseline_bdedb2_v3.sh  bench_64mol.sh  benchmark_admet.py  benchmark_parallel_64.py  benchmark_pipeline.py  benchmark_proxy_vs_dock.py  benchmark_reasyn_depth.py  benchmark_reasyn_depth.sh  benchmark_reasyn_fast.py  benchmark_rl_workers.py  build_product_index.py  classify_paroutes_templates.py  compare_search_depth.py  compute_diversity_metrics.py  compute_ip_error.py  compute_predictor_errors.py  compute_reward_perturbation.py  compute_reward_perturbation_anti.py  dist.sh  dist_bde.sh  dock_v5.sh  dock_v6.sh  (+81 more)
src/: CMakeLists.txt  CMakeLists.txt.GH200  build_cenv.sh  build_cenv_py311.sh  environment.cpp  environment.h  incremental_morgan_fingerprint.cpp  incremental_morgan_fingerprint.h  note.txt  test.cpp
src/build_py311/: CMakeCache.txt  Makefile  cmake_install.cmake  det_npp.py
src/build_py313/: CMakeCache.txt  Makefile  cmake_install.cmake
synnet/: dry_run_new_models.py  force_upgrade.py  run_full_training.sh  synth_agent.py  synth_env.py  train_models.py  upgrade_ckpts.py
tem/: sharedfile_test_1
template/: __init__.py  action_generator.py  building_blocks.py  dqn_predictor.py  reaction.py  template_predictor.py
tests/: profile_incremental_etkdg.py  profile_unimol.py  test_constrained_embed.py  test_improved_ce.py
(+208 files in other folders)
